--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
-Werkzeug==1.0.1
-Flask==1.1.2
 Flask_SQLAlchemy==2.4.4
-PyJWT==1.7.1
-pandas
+requests==2.25.1
+Flask==1.1.2
+geocoder==1.38.1
+Werkzeug==1.0.1
+pandas==1.2.2
+PyJWT==2.0.1
 numpy
 sklearn
 matplotlib
