--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
-pandas
-numpy
-sklearn
+matplotlib==3.3.4
+numpy==1.19.5
+opencv-python==4.5.1.48
+pandas==1.2.2
+seaborn==0.11.1
+sklearn==0.0
+tensorflow==2.4.1
+tqdm==4.57.0
+
